# app/Models/User/User.php
@@ -16,6 +16,7 @@ use Illuminate\Support\Carbon;
  * @property string                               $email
  * @property string                               $password
  * @property string                               $name
+ * @property string                               $nickname
  * @property Carbon                               $created_at
  * @property Carbon                               $updated_at
  */
@@ -30,6 +31,7 @@ class User extends Model
      */
     protected $fillable = [
         'name',
+        'nickname',
         'email',
         'password',
     ];
