# app/Support/Requests/UserStoreRequest.php
@@ -8,7 +8,7 @@ use Illuminate\Foundation\Http\FormRequest;
  * @OA\Schema(
  *   schema="UserStoreRequest",
  *   description="Create new user",
- *   required={"name", "email", "password"},
+ *   required={"name", "nickname", "email", "password"},
  *   @OA\Property(
  *      property="name",
  *      type="string",
@@ -16,6 +16,14 @@ use Illuminate\Foundation\Http\FormRequest;
  *      description="User name",
  *      minLength=1,
  *      maxLength=191,
+ *   ),
+ *   @OA\Property(
+ *      property="nickname",
+ *      type="string",
+ *      example="marisol61",
+ *      description="User nickname",
+ *      minLength=1,
+ *      maxLength=29,
  *   ),
  *   @OA\Property(
  *      property="email",
@@ -57,6 +65,7 @@ class UserStoreRequest extends FormRequest
     {
         return [
             'name'     => 'required|string|max:191|min:1',
+            'nickname' => 'required|string|max:29|min:1|unique:users,nickname',
             'email'    => 'required|email|unique:users',
             'password' => 'required|string|min:8|max:191',
         ];
